Tela de alimentos e Ids das telas funcionando

--- a/PaginaPrincipal/PaginaPrincipal.html
+++ b/PaginaPrincipal/PaginaPrincipal.html
@@ -108,7 +108,7 @@
                     <a href="../PaginaPrincipal/PaginaPrincipal.html"> <img class="mx-auto d-block"
                             src="../Imagens/2-cortada.png" alt="Logo da Cash Control" style="height: 70px"></a>
                     <p class="text-center" id="nome-usuario"> Olá, <a class="tex"
-                            href="../PerfilUsuario/PerfilUsuario.html" id="link-usuario">usuário</p>
+                            href="../PerfilUsuario/PerfilUsuario.html" id="link-usuario2">usuário</p>
                     <div class="row">
                         <div class="col">
                             <div class="mt-3"><a href="../ItensCadastrados/ItensCadastrados.html"> Itens Cadastrados</a>
@@ -121,7 +121,7 @@
                             </div>
                             <div class="mt-3 "><a href="../CadastroItens/Imposto.html"> Imposto </a></div>
                             <div class="mt-3 "><a href="../CadastroItens/Lazer.html"> Lazer </a></div>
-                            <div class="mt-3 dropdown" data-bs-toggle="dropdown">Mercado</div>
+                            <div class="mt-3 dropdown" style="cursor: pointer;"  data-bs-toggle="dropdown">Mercado</div>
                             <ul class="dropdown-menu text-center">
                                 <li class="dropdown-item"><a href="../CadastroItens/Alimentos.html"> Alimentos </a>
                                 </li>
