--- a/ItensCadastrados/ItensCadastrados.html
+++ b/ItensCadastrados/ItensCadastrados.html
@@ -10,7 +10,6 @@
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <link rel="stylesheet" href="ItensCadastrados.css">
-    <script src="ItensCadastrados.js"></script>
 
 </head>
 
@@ -218,15 +217,17 @@
                                 <input type="text" class="form-control me-2" placeholder="Valor Total" disabled
                                     style=" height: 25px;  width: 20%; background-color: #E6E6E6;">
 
-                                <div class="d-flex align-items-center iconesPagination">
-                                    <a href="#" id="prev-page" class="prev-page">
-                                        <i class="bi bi-dash-circle green-icon" style="margin-right: 5px;"></i>
-                                    </a>
-                                    <p id="page-number" class="page-number" style="padding-top: 12px;">1</p>
-                                    <a href="#" id="next-page" class="next-page">
-                                        <i class="bi bi-plus-circle green-icon" style="margin-left: 5px;"></i>
-                                    </a>
-                                </div>
+                                    <div class="pagination-controls d-flex justify-content-center align-items-center ">
+                                        <div class="d-flex align-items-center iconesPagination">
+                                            <a href="" id="prev-page" class="prev-page disabled">
+                                                <i class="bi bi-dash-circle green-icon" style="margin-right: 5px;"></i>
+                                            </a>
+                                            <p id="page-number" class="page-number" style="padding-top: 12px;">1</p>
+                                            <a href="" id="next-page" class="next-page">
+                                                <i class="bi bi-plus-circle green-icon" style="margin-left: 5px;"></i>
+                                            </a>
+                                        </div>
+                                    </div>
 
                             </div>
                         </div>
@@ -265,7 +266,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
         crossorigin="anonymous"></script>
-
+    <script src="ItensCadastrados.js"></script>
 </body>
 
 </html>
