Filtros e calculo de gastos totais funcionando

--- a/ItensCadastrados/ItensCadastrados.html
+++ b/ItensCadastrados/ItensCadastrados.html
@@ -194,6 +194,7 @@
                                     </div>
                                 </div>
 
+                                <label for="input-valor-total" class="form-label">Total de Gastos:</label>
                                 <input id="input-valor-total" type="text" class="form-control me-2" placeholder="Valor Total" disabled
                                     style="height: 25px; width: 20%; background-color: #E6E6E6;">
 
