--- a/PerfilUsuario/PerfilUsuario.html
+++ b/PerfilUsuario/PerfilUsuario.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -12,10 +13,14 @@
 </head>
 
 <body>
+
+  <!-- CABEÇALHO -->
   <header>
-    <a href="../PaginaPrincipal/PaginaPrincipal.html"><img src="../Imagens/1.png" alt="Logo da Cash Control" height="70px"></a>
+    <a href="../PaginaPrincipal/PaginaPrincipal.html"><img src="../Imagens/1.png" alt="Logo da Cash Control"
+        height="70px"></a>
   </header>
 
+  <!-- CARD -->
   <div class="containerCard">
     <h2 id="nome-usuario"> USUÁRIO </h2>
 
@@ -23,7 +28,8 @@
       <label for="valor" class="col-form-label"> E-MAIL </label>
       <div class="d-flex">
         <input type="text" class="form-control" id="email-usuario" name="valor" disabled>
-        <input type="text" class="form-control caixa-input" id="caixa-input" name="descricao" style="display: none;" disabled>
+        <input type="text" class="form-control caixa-input" id="caixa-input" name="descricao" style="display: none;"
+          disabled>
       </div>
     </div>
 
@@ -31,7 +37,8 @@
       <label for="valor" class="col-form-label"> CPF </label>
       <div class="d-flex">
         <input type="text" class="form-control" id="cpf-usuario" name="valor" disabled>
-        <input type="text" class="form-control caixa-input" id="caixa-input" name="descricao" style="display: none;" disabled>
+        <input type="text" class="form-control caixa-input" id="caixa-input" name="descricao" style="display: none;"
+          disabled>
       </div>
     </div>
 
@@ -39,14 +46,21 @@
       <label for="valor" class="col-form-label"> TELEFONE </label>
       <div class="d-flex">
         <input type="text" class="form-control" id="telefone-usuario" name="valor" disabled>
-        <input type="text" class="form-control caixa-input" id="caixa-input" name="descricao" style="display: none;" disabled>
+        <input type="text" class="form-control caixa-input" id="caixa-input" name="descricao" style="display: none;"
+          disabled>
       </div>
+    </div>
+
+    <div class="botaoSair">
+      <button class="cancelar" onclick="Sair()"> SAIR DA CONTA</button>
     </div>
   </div>
 
+  <!-- RODAPÉ -->
   <footer id='rodape'>
     <h5 id='frase-impacto'> CONQUISTE O CONTROLE FINANCEIRO QUE VOCÊ MERECE! </h5>
   </footer>
 
 </body>
+
 </html>
