--- a/TelaCadastro/TelaCadastro.html
+++ b/TelaCadastro/TelaCadastro.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -14,10 +15,13 @@
 
 <body>
 
+  <!-- CABEÇALHO -->
   <header>
-    <a href="../PaginaInicial/PaginaInicial.html"><img src="../Imagens/1.png" alt="Logo da Cash Control" height="70px"></a>
+    <a href="../PaginaInicial/PaginaInicial.html"><img src="../Imagens/1.png" alt="Logo da Cash Control"
+        height="70px"></a>
   </header>
 
+  <!-- CARD -->
   <div class="container1">
     <div class="cadastro">
       <h2> FAZER CADASTRO </h2>
@@ -39,14 +43,16 @@
 
         <div>
           <label for="celular"> TELEFONE </label>
-          <input type="tel" id="celular" class="form-control" name="celular" maxlength="14" oninput="formatarTelefone(this)" placeholder="(__) _____-____" required>
+          <input type="tel" id="celular" class="form-control" name="celular" maxlength="14"
+            oninput="formatarTelefone(this)" placeholder="(__) _____-____" required>
           <div class="valid-feedback"></div>
           <div class="invalid-feedback"> Preencha o campo </div>
         </div>
 
         <div>
           <label for="cpf"> CPF </label>
-          <input type="tel" id="cpf" class="form-control" name="cpf" maxlength="14" oninput="formatarCpf(this)" required>
+          <input type="tel" id="cpf" class="form-control" name="cpf" maxlength="14" oninput="formatarCpf(this)"
+            required>
           <div class="valid-feedback"></div>
           <div class="invalid-feedback" id="cpf-feedback"> Preencha o campo </div>
         </div>
@@ -70,9 +76,11 @@
     </div>
   </div>
 
+  <!-- RODAPÉ -->
   <footer id='rodape'>
     <h5 id='frase-impacto'> CONQUISTE O CONTROLE FINANCEIRO QUE VOCÊ MERECE! </h5>
   </footer>
 
 </body>
+
 </html>
