--- a/TelaLogin/TelaLogin.html
+++ b/TelaLogin/TelaLogin.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -13,10 +14,14 @@
 </head>
 
 <body>
+
+  <!-- CABEÇALHO -->
   <header>
-    <a href="../PaginaInicial/PaginaInicial.html"><img src="../Imagens/1.png" alt="Logo da Cash Control"height="70px"></a>
+    <a href="../PaginaInicial/PaginaInicial.html"><img src="../Imagens/1.png" alt="Logo da Cash Control"
+        height="70px"></a>
   </header>
 
+  <!-- CARD -->
   <div class="container-card-login">
     <div class="login">
       <h2> FAZER LOGIN </h2>
@@ -38,14 +43,18 @@
         <button type="button" id="botao" onclick="validarLogin()"> ENTRAR </button>
 
         <p> AINDA NÃO POSSUI CADASTRO? </p>
-        <a href="../TelaCadastro/TelaCadastro.html" style="text-decoration: none;"><p id="cadastre-se"> CADASTRE-SE </p></a>
+        <a href="../TelaCadastro/TelaCadastro.html" style="text-decoration: none;">
+          <p id="cadastre-se"> CADASTRE-SE </p>
+        </a>
       </form>
     </div>
   </div>
 
+  <!-- RODAPÉ -->
   <footer id='rodape'>
     <h5 id='frase-impacto'>CONQUISTE O CONTROLE FINANCEIRO QUE VOCÊ MERECE! </h5>
   </footer>
 
 </body>
+
 </html>
