--- a/CadastroItens/Alimentos.html
+++ b/CadastroItens/Alimentos.html
@@ -4,12 +4,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Itens cadastrados</title>
+    <title>Cadastrar Itens</title>
     <link rel="shortcut icon" href="../Logos/2-cortada.png" type="image/x-icon" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
-    <link rel="stylesheet" href="Alimentos.css">
+    <link rel="stylesheet" href="Setores.css">
     <script src="Alimentos.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 
@@ -17,6 +17,7 @@
 
 <body>
 
+    <!-- MENU SUPERIOR -->
     <div class="MenuSUPERIOR" id="menuSUPERIOR">
         <div class="container ">
             <div class="d-flex ">
@@ -24,16 +25,19 @@
                     <a href="../PaginaPrincipal/PaginaPrincipal.html"> <img src="../Imagens/2-cortada.png"
                             alt="Logo da Cash Control" style="height: 70px" class="mr-3">
                     </a>
+                    <!-- NOME DO USUÁRIO -->
                     <p id="nome-usuario" class="text-center m-0">Olá, <a href="../PerfilUsuario/PerfilUsuario.html"
                             id="link-usuario2">usuário</a></p>
                 </div>
 
-
+                <!-- DROPDOWN SUPERIOR -->
                 <div class="dropdown ms-auto mt-3 " style="border-bottom: 0px;">
                     <button class="btn btn-secondary" type="button" id="dropdownMenuButton" data-bs-toggle="dropdown"
                         aria-expanded="false">
                         Cadastrar Item
                     </button>
+
+                    <!-- LISTA DE SETORES -->
                     <ul class="dropdown-menu text-center" aria-labelledby="dropdownMenuButton">
                         <li class="mt-2">
                             <a href="../ItensCadastrados/ItensCadastrados.html"> Itens Cadastrados</a>
@@ -56,6 +60,8 @@
                                 data-bs-toggle="dropdown" aria-expanded="false">
                                 Mercado
                             </button>
+
+                            <!-- DROWPDOWN DO MERCADO -->
                             <ul class="dropdown-menu text-center " aria-labelledby=" dropdownMenuButton2">
                                 <li class="mt-2"><a href="../CadastroItens/Alimentos.html"> Alimentos </a>
                                 </li>
@@ -96,14 +102,12 @@
                         </li>
                     </ul>
                 </div>
-
-
-
             </div>
         </div>
     </div>
 
 
+    <!-- MENU LATERAL -->
     <div class="row">
         <div class="col-3">
             <div class="MenuLATERAL " id="menuLateral">
@@ -111,10 +115,14 @@
                     <a href="../PaginaPrincipal/PaginaPrincipal.html">
                         <img class="mx-auto d-block" src="../Imagens/2-cortada.png" alt="Logo da Cash Control"
                             style="height: 70px"></a>
+
+                    <!-- NOME DO USUÁRIO -->
                     <p class="text-center" id="nome-usuario"> Olá, <a class="tex"
                             href="../PerfilUsuario/PerfilUsuario.html" id="link-usuario">usuário</p>
                     <div class="row">
                         <div class="col">
+
+                            <!-- LISTA DE SETORES -->
                             <div class="mt-3"><a href="../ItensCadastrados/ItensCadastrados.html"> Itens Cadastrados</a>
                             </div>
                             <div class="mt-3"><a href="../CadastroItens/CuidadosPessoais.html"> Cuidados
@@ -127,6 +135,8 @@
                             <div class="mt-3 "><a href="../CadastroItens/Lazer.html"> Lazer </a></div>
                             <div class="mt-3 dropdown" style="cursor: pointer;" data-bs-toggle="dropdown">Mercado</div>
                             <ul class="dropdown-menu text-center">
+
+                                <!-- DROPDOWN DE MERCADO -->
                                 <li class="dropdown-item"><a href="../CadastroItens/Alimentos.html"> Alimentos </a>
                                 </li>
                                 <li class="dropdown-item"><a href="../CadastroItens/Bebidas.html"> Bebidas </a>
@@ -155,9 +165,6 @@
                 </div>
             </div>
         </div>
-
-
-
 
         <div class="col-9">
             <div class="col d-flex justify-content-center ">
