--- a/PaginaPrincipal/PaginaPrincipal.html
+++ b/PaginaPrincipal/PaginaPrincipal.html
@@ -13,7 +13,7 @@
 
 <body>
 
-
+    <!-- MENU SUPERIOR -->
     <div class="MenuSUPERIOR" id="menuSUPERIOR">
         <div class="container ">
             <div class="d-flex ">
@@ -21,16 +21,20 @@
                     <a href="../PaginaPrincipal/PaginaPrincipal.html"><img src="../Imagens/2-cortada.png"
                             alt="Logo da Cash Control" style="height: 70px" class="mr-3">
                     </a>
-                    <p id="nome-usuario" class="text-center m-0">Olá, <a href="../PerfilUsuario/PerfilUsuario.html"
+
+                    <!-- NOME DO USUÁRIO -->
+                    <p id="nome-usuario" class="text-center m-0"> Olá, <a href="../PerfilUsuario/PerfilUsuario.html"
                             id="link-usuario">usuário</a></p>
                 </div>
 
-
+                <!-- DROPDOWN SUPERIOR -->
                 <div class="dropdown ms-auto mt-3 " style="border-bottom: 0px;">
                     <button class="btn btn-secondary " type="button" id="dropdownMenuButton" data-bs-toggle="dropdown"
                         aria-expanded="false">
                         Cadastrar Item
                     </button>
+
+                    <!-- LISTA DE SETORES -->
                     <ul class="dropdown-menu text-center" aria-labelledby="dropdownMenuButton">
                         <li class="mt-2">
                             <a href="../ItensCadastrados/ItensCadastrados.html"> Itens Cadastrados</a>
@@ -53,6 +57,8 @@
                                 data-bs-toggle="dropdown" aria-expanded="false">
                                 Mercado
                             </button>
+
+                            <!-- DROWPDOWN DO MERCADO -->
                             <ul class="dropdown-menu text-center aria-labelledby=" dropdownMenuButton2">
                                 <li class="mt-2"><a href="../CadastroItens/Alimentos.html"> Alimentos </a>
                                 </li>
@@ -69,7 +75,6 @@
                         </li>
                         <li class="mt-2">
                             <a href="../CadastroItens/Moradia.html"> Moradia </a>
-
                         </li>
                         <li class="mt-2">
                             <a href="../CadastroItens/PoupançaInvestimento.html"> Poupança e
@@ -93,24 +98,26 @@
                         </li>
                     </ul>
                 </div>
-
-
-
             </div>
         </div>
     </div>
 
 
+    <!-- MENU LATERAL -->
     <div class="row" id="porColunas">
         <div class="col-3">
             <div class="MenuLATERAL " id="menuLateral">
                 <div class="container">
                     <a href="../PaginaPrincipal/PaginaPrincipal.html"> <img class="mx-auto d-block"
                             src="../Imagens/2-cortada.png" alt="Logo da Cash Control" style="height: 70px"></a>
+
+                    <!-- NOME DO USUÁRIO -->
                     <p class="text-center" id="nome-usuario"> Olá, <a class="tex"
                             href="../PerfilUsuario/PerfilUsuario.html" id="link-usuario2">usuário</p>
                     <div class="row">
                         <div class="col">
+
+                            <!-- LISTA DE SETORES -->
                             <div class="mt-3"><a href="../ItensCadastrados/ItensCadastrados.html"> Itens Cadastrados</a>
                             </div>
                             <div class="mt-3"><a href="../CadastroItens/CuidadosPessoais.html"> Cuidados
@@ -121,8 +128,10 @@
                             </div>
                             <div class="mt-3 "><a href="../CadastroItens/Imposto.html"> Imposto </a></div>
                             <div class="mt-3 "><a href="../CadastroItens/Lazer.html"> Lazer </a></div>
-                            <div class="mt-3 dropdown" style="cursor: pointer;"  data-bs-toggle="dropdown">Mercado</div>
+                            <div class="mt-3 dropdown" style="cursor: pointer;" data-bs-toggle="dropdown">Mercado</div>
                             <ul class="dropdown-menu text-center">
+
+                                <!-- DROPDOWN DE MERCADO -->
                                 <li class="dropdown-item"><a href="../CadastroItens/Alimentos.html"> Alimentos </a>
                                 </li>
                                 <li class="dropdown-item"><a href="../CadastroItens/Bebidas.html"> Bebidas </a>
@@ -152,7 +161,7 @@
             </div>
         </div>
 
-
+        <!-- CRIAÇÃO DOS CARDS -->
         <div class="col-9">
             <div class="row row-cols-1 row-cols-lg-2 row-cols-xl-3 g-4" id="container-card">
 
@@ -403,10 +412,7 @@
         </div>
     </div>
 
-
-
-
-
+    <!-- RODAPÉ -->
     <footer id='rodape' class="text-center text-lg-start">
         <div class="container p-1">
             <div id='rodape-conteudo' class="row align-items-center">
@@ -424,10 +430,6 @@
             </div>
         </div>
     </footer>
-
-
-
-
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
