--- a/PerfilUsuario/PerfilUsuario.html
+++ b/PerfilUsuario/PerfilUsuario.html
@@ -52,7 +52,7 @@
     </div>
 
     <div class="botaoSair">
-      <button class="cancelar" onclick="Sair()"> SAIR DA CONTA</button>
+      <button class="cancelar" id="botaoSair" onclick="Sair()"> SAIR DA CONTA</button>
     </div>
   </div>
 
