--- a/ItensCadastrados/ItensCadastrados.html
+++ b/ItensCadastrados/ItensCadastrados.html
@@ -10,7 +10,7 @@
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <link rel="stylesheet" href="ItensCadastrados.css">
-
+    <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
 </head>
 
 <body>
@@ -120,8 +120,10 @@
                         <div class="col">
 
                             <!-- LISTA DE SETORES -->
-                            <div class="mt-3"><a href="../ItensCadastrados/ItensCadastrados.html"> Itens Cadastrados</a>
+                            <div class="mt-3 text-center"><a  id="borda-itens-cadastrados" href="../ItensCadastrados/ItensCadastrados.html"> Itens Cadastrados</a>
+                                  
                             </div>
+                            
                             <div class="mt-3"><a href="../CadastroItens/CuidadosPessoais.html"> Cuidados
                                     Pessoais</a>
                             </div>
