--- a/CadastroItens/Imposto.html
+++ b/CadastroItens/Imposto.html
@@ -15,7 +15,7 @@
 
 </head>
 
-<body>
+<body background="../Imagens/Fundo.jpg">
 
     <!-- MENU SUPERIOR -->
     <div class="MenuSUPERIOR" id="menuSUPERIOR">
@@ -27,21 +27,18 @@
                     </a>
                     <!-- NOME DO USUÁRIO -->
                     <p id="nome-usuario" class="text-center m-0">Olá, <a href="../PerfilUsuario/PerfilUsuario.html"
-                            id="link-usuario2">usuário</a></p>
+                            id="link-usuario">usuário</a></p>
                 </div>
 
                 <!-- DROPDOWN SUPERIOR -->
                 <div class="dropdown ms-auto mt-3 " style="border-bottom: 0px;">
-                    <button class="btn btn-secondary" type="button" id="dropdownMenuButton" data-bs-toggle="dropdown"
+                    <button class="btn btn-secondary " type="button" id="dropdownMenuButton" data-bs-toggle="dropdown"
                         aria-expanded="false">
-                        Cadastrar Item
+                        MENU
                     </button>
 
                     <!-- LISTA DE SETORES -->
                     <ul class="dropdown-menu text-center" aria-labelledby="dropdownMenuButton">
-                        <li class="mt-2">
-                            <a href="../ItensCadastrados/ItensCadastrados.html"> Itens Cadastrados</a>
-                        </li>
                         <li class="mt-2">
                             <a href="../CadastroItens/CuidadosPessoais.html"> Cuidados Pessoais</a>
                         </li>
@@ -56,13 +53,13 @@
                         <li class="mt-2"> <a href="../CadastroItens/Lazer.html"> Lazer </a></li>
 
                         <li class="dropdown" onclick="stopPropagation(event)">
-                            <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton2"
+                            <button class="btn btn-secondary" type="button" id="dropdownMenuButton2"
                                 data-bs-toggle="dropdown" aria-expanded="false">
                                 Mercado
                             </button>
 
                             <!-- DROWPDOWN DO MERCADO -->
-                            <ul class="dropdown-menu text-center " aria-labelledby=" dropdownMenuButton2">
+                            <ul class="dropdown-menu text-center aria-labelledby">
                                 <li class="mt-2"><a href="../CadastroItens/Alimentos.html"> Alimentos </a>
                                 </li>
                                 <li class="mt-2"><a href="../CadastroItens/Bebidas.html"> Bebidas </a>
@@ -78,7 +75,6 @@
                         </li>
                         <li class="mt-2">
                             <a href="../CadastroItens/Moradia.html"> Moradia </a>
-
                         </li>
                         <li class="mt-2">
                             <a href="../CadastroItens/PoupançaInvestimento.html"> Poupança e
@@ -100,6 +96,11 @@
                         <li class="mt-2">
                             <a href="../CadastroItens/Outros.html"> Outros</a>
                         </li>
+                        <li class="mt-4">
+                            <button id='botao-itens-flex' type="button" class="btn">
+                                <a id="link-itens-flex" href="../ItensCadastrados/ItensCadastrados.html"> Cadastrados
+                                </a></button>
+                        </li>
                     </ul>
                 </div>
             </div>
@@ -112,19 +113,16 @@
         <div class="col-3">
             <div class="MenuLATERAL " id="menuLateral">
                 <div class="container">
-                    <a href="../PaginaPrincipal/PaginaPrincipal.html">
-                        <img class="mx-auto d-block" src="../Imagens/2-cortada.png" alt="Logo da Cash Control"
-                            style="height: 70px"></a>
+                    <a href="../PaginaPrincipal/PaginaPrincipal.html"> <img class="mx-auto d-block"
+                            src="../Imagens/2-cortada.png" alt="Logo da Cash Control" style="height: 70px"></a>
 
                     <!-- NOME DO USUÁRIO -->
                     <p class="text-center" id="nome-usuario"> Olá, <a class="tex"
-                            href="../PerfilUsuario/PerfilUsuario.html" id="link-usuario">usuário</p>
+                            href="../PerfilUsuario/PerfilUsuario.html" id="link-usuario2">usuário</p>
                     <div class="row">
                         <div class="col">
 
                             <!-- LISTA DE SETORES -->
-                            <div class="mt-3"><a href="../ItensCadastrados/ItensCadastrados.html"> Itens Cadastrados</a>
-                            </div>
                             <div class="mt-3"><a href="../CadastroItens/CuidadosPessoais.html"> Cuidados
                                     Pessoais</a>
                             </div>
@@ -133,8 +131,9 @@
                             </div>
                             <div class="mt-3 "><a href="../CadastroItens/Imposto.html"> Imposto </a></div>
                             <div class="mt-3 "><a href="../CadastroItens/Lazer.html"> Lazer </a></div>
-                            <div class="mt-3 dropdown" style="cursor: pointer;" data-bs-toggle="dropdown">Mercado</div>
-                            <ul class="dropdown-menu text-center">
+                            <div class="mt-3 dropdown" style="cursor: pointer;" data-bs-toggle="dropdown"
+                                id="dropdownMenuButton2">Mercado</div>
+                            <ul class="dropdown-menu">
 
                                 <!-- DROPDOWN DE MERCADO -->
                                 <li class="dropdown-item"><a href="../CadastroItens/Alimentos.html"> Alimentos </a>
@@ -162,10 +161,15 @@
                                     Outros </a></div>
                         </div>
                     </div>
+
+                    <button id='botao-itens' type="button" class="btn">
+                        <a id="link-itens" href="../ItensCadastrados/ItensCadastrados.html"> ITENS CADASTRADOS
+                        </a></button>
                 </div>
             </div>
         </div>
 
+        <!--CRIANDO O CARD DE CADASTRO-->
         <div class="col-9">
             <div class="col d-flex justify-content-center ">
                 <div class="containerCard  ">
@@ -191,6 +195,7 @@
                             <div class="invalid-feedback">Preencha o campo.</div>
                         </div>
                         <div>
+                        <div>
                             <label> DESCRIÇÃO DO PRODUTO </label>
                             <input type="text" id="descricao" name="descricao" required>
                         </div>
@@ -206,18 +211,20 @@
 
     </div>
 
+    <!-- RODAPÉ -->
     <footer id='rodape' class="text-center text-lg-start">
         <div class="container p-1">
             <div id='rodape-conteudo' class="row align-items-center">
                 <div class="col-lg-4 mb-md-0 justify-content-center align-items-center">
                     <a href="../PaginaPrincipal/PaginaPrincipal.html"><img src="../Imagens/1.png"
-                            alt="logo Cash Control" style="height: 100px;"></a>
+                            alt="logo Cash Control" style="height: 90px;"></a>
                 </div>
                 <div class="col-lg-8 col-md-12 mb-md-0 text-center">
                     <h5 id='frase-impacto' class="text-uppercase mb-1 mt-3">CONQUISTE O CONTROLE FINANCEIRO QUE VOCÊ
                         MERECE!</h5>
                     <button id='botao-atendimento' type="button" class="btn mt-3 mb-3">
-                        <a href="mailto:atendimentocashcontrol@outlook.com.br" target="_blank"> CENTRAL DE ATENDIMENTO
+                        <a id="link-atendimento" href="mailto:atendimentocashcontrol@outlook.com.br" target="_blank">
+                            CENTRAL DE ATENDIMENTO
                         </a></button>
                 </div>
             </div>
