--- a/ItensCadastrados/ItensCadastrados.html
+++ b/ItensCadastrados/ItensCadastrados.html
@@ -13,7 +13,7 @@
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
 </head>
 
-<body>
+<body background="../Imagens/Fundo.png">
 
     <!-- MENU SUPERIOR -->
     <div class="MenuSUPERIOR" id="menuSUPERIOR">
@@ -33,14 +33,11 @@
                 <div class="dropdown ms-auto mt-3 " style="border-bottom: 0px;">
                     <button class="btn btn-secondary " type="button" id="dropdownMenuButton" data-bs-toggle="dropdown"
                         aria-expanded="false">
-                        Cadastrar Item
+                        MENU
                     </button>
 
                     <!-- LISTA DE SETORES -->
                     <ul class="dropdown-menu text-center" aria-labelledby="dropdownMenuButton">
-                        <li class="mt-2">
-                            <a href="../ItensCadastrados/ItensCadastrados.html"> Itens Cadastrados</a>
-                        </li>
                         <li class="mt-2">
                             <a href="../CadastroItens/CuidadosPessoais.html"> Cuidados Pessoais</a>
                         </li>
@@ -55,13 +52,13 @@
                         <li class="mt-2"> <a href="../CadastroItens/Lazer.html"> Lazer </a></li>
 
                         <li class="dropdown" onclick="stopPropagation(event)">
-                            <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton2"
+                            <button class="btn btn-secondary" type="button" id="dropdownMenuButton2"
                                 data-bs-toggle="dropdown" aria-expanded="false">
                                 Mercado
                             </button>
 
-                            <!-- DROWPDOWN DO MENU -->
-                            <ul class="dropdown-menu text-center aria-labelledby=" dropdownMenuButton2">
+                            <!-- DROWPDOWN DO MERCADO -->
+                            <ul class="dropdown-menu text-center aria-labelledby">
                                 <li class="mt-2"><a href="../CadastroItens/Alimentos.html"> Alimentos </a>
                                 </li>
                                 <li class="mt-2"><a href="../CadastroItens/Bebidas.html"> Bebidas </a>
@@ -98,6 +95,11 @@
                         <li class="mt-2">
                             <a href="../CadastroItens/Outros.html"> Outros</a>
                         </li>
+                        <li class="mt-4">
+                            <button id='botao-itens-flex' type="button" class="btn">
+                                <a id="link-itens-flex" href="../ItensCadastrados/ItensCadastrados.html"> Cadastrados
+                                </a></button>
+                        </li>
                     </ul>
                 </div>
             </div>
@@ -110,20 +112,16 @@
         <div class="col-3">
             <div class="MenuLATERAL " id="menuLateral">
                 <div class="container">
-
-                    <!-- NOME DO USUÁRIO -->
                     <a href="../PaginaPrincipal/PaginaPrincipal.html"> <img class="mx-auto d-block"
                             src="../Imagens/2-cortada.png" alt="Logo da Cash Control" style="height: 70px"></a>
+
+                    <!-- NOME DO USUÁRIO -->
                     <p class="text-center" id="nome-usuario"> Olá, <a class="tex"
                             href="../PerfilUsuario/PerfilUsuario.html" id="link-usuario2">usuário</p>
                     <div class="row">
                         <div class="col">
 
                             <!-- LISTA DE SETORES -->
-                            <div class="mt-3 text-center"><a  id="borda-itens-cadastrados" href="../ItensCadastrados/ItensCadastrados.html"> Itens Cadastrados</a>
-                                  
-                            </div>
-                            
                             <div class="mt-3"><a href="../CadastroItens/CuidadosPessoais.html"> Cuidados
                                     Pessoais</a>
                             </div>
@@ -132,8 +130,9 @@
                             </div>
                             <div class="mt-3 "><a href="../CadastroItens/Imposto.html"> Imposto </a></div>
                             <div class="mt-3 "><a href="../CadastroItens/Lazer.html"> Lazer </a></div>
-                            <div class="mt-3 dropdown" style="cursor: pointer;" data-bs-toggle="dropdown">Mercado</div>
-                            <ul class="dropdown-menu text-center">
+                            <div class="mt-3 dropdown" style="cursor: pointer;" data-bs-toggle="dropdown"
+                                id="dropdownMenuButton2">Mercado</div>
+                            <ul class="dropdown-menu">
 
                                 <!-- DROPDOWN DE MERCADO -->
                                 <li class="dropdown-item"><a href="../CadastroItens/Alimentos.html"> Alimentos </a>
@@ -161,9 +160,14 @@
                                     Outros </a></div>
                         </div>
                     </div>
+
+                    <button id='botao-itens' type="button" class="btn">
+                        <a id="link-itens" href="../ItensCadastrados/ItensCadastrados.html"> ITENS CADASTRADOS
+                        </a></button>
                 </div>
             </div>
         </div>
+
 
         <!-- CARD -->
         <div class="col-9">
@@ -180,6 +184,11 @@
                                             <th style="font-size: large;" scope="col">Data</th>
                                             <th style="font-size: large;" scope="col">Valor</th>
                                             <th id="reduzir-descricao-para-desc" style="font-size: large;" scope="col">Descrição</th>
+                                            </th>
+                                            <th id="reduzir-editar" style="font-size: large;" scope="col">Editar
+                                            </th>
+                                            <th id="reduzir-deletar" style="font-size: large;" scope="col"> Deletar
+                                            </th>
                                         </tr>
                                     </thead>
                                     <tbody id="tabelaCorpo">
@@ -188,14 +197,14 @@
                                 </table>
                             </div>
 
-                            <div class="pagination-controls" id="row-setores-input-pagination">
+                            <div class="pagination-controls d-flex" id="div-ultimos-itens">
 
                                 <!-- FILTRO POR MÊS -->
-                                <div class="row ">
-                                    <div class="col text-center">
-                                        <label for="filtro-mes" class="form-label">Filtrar por Mês:</label>
-                                        <select id="filtro-mes" class="form-select mx-auto">
-                                            <option value="0">Todos</option>
+                                <div class="row mt-3 align-items-center">
+
+                                    <div class="col-md-3" id="div-filtro-mes">
+                                        <select id="filtro-mes" class="form-select">
+                                            <option value="0">Mês</option>
                                             <option value="01">Janeiro</option>
                                             <option value="02">Fevereiro</option>
                                             <option value="03">Março</option>
@@ -212,10 +221,9 @@
                                     </div>
 
                                     <!-- FILTRO POR CATEGORIA -->
-                                    <div class="col text-center">
-                                        <label for="filtro-setor" class="form-label">Filtrar por Setor:</label>
-                                        <select id="filtro-setor" class="form-select mx-auto">
-                                            <option value="0">Todos</option>
+                                    <div class="col-md-3" id="div-filtro-categoria">
+                                        <select id="filtro-categoria" class="form-select">
+                                            <option value="0">Setor</option>
                                             <option value="01">Cuidados Pessoais</option>
                                             <option value="02">Educação</option>
                                             <option value="03">Financiamento</option>
@@ -234,37 +242,27 @@
                                             <option value="16">Outros</option>
                                         </select>
                                     </div>
+                                </div>
 
-                                    <div class="col text-center">
-                                        <!-- TOTAL -->
-                                        <label for="input-valor-total" class="form-label">Total de Gastos:</label>
-                                        <input id="input-valor-total" type="text" class="form-control mx-auto"
-                                            placeholder="Valor Total" disabled style="background-color: #E6E6E6;">
+                                <!-- TOTAL -->
+
+                                <div id="card-valor-total" class="col-md-4 d-flex">
+                                    <label id="label-valor-total" for="input-valor-total" class="form-label">Total:
+                                    </label>
+                                    <input id="input-valor-total" type="text" class="form-control"
+                                        placeholder="Valor Total" disabled style="background-color: #E6E6E6;">
+                                </div>
+
+                                <div class="pagination-controls d-flex justify-content-center align-items-center">
+                                    <div class="d-flex" id="iconesPagination">
+                                        <a href="#" id="prev-page" class="prev-page disabled">
+                                            <i class="bi bi-dash-circle green-icon" style="margin-right: 5px;"></i>
+                                        </a>
+                                        <p id="page-number" class="page-number">1</p>
+                                        <a href="#" id="next-page" class="next-page">
+                                            <i class="bi bi-plus-circle green-icon" style="margin-left: 5px;"></i>
+                                        </a>
                                     </div>
-                                    <div class="col d-flex justify-content-center">
-                                        <div class="pagination-controls">
-                                            <label for="input-valor-total" class="form-label">Paginação:</label>
-                                            <div class="d-flex  iconesPagination">
-                                                <div>
-                                                    <a href="#" id="prev-page" class="prev-page disabled">
-                                                        <i class="bi bi-arrow-left green-icon"
-                                                            style="margin-right: 8px;"></i>
-                                                    </a>
-                                                    <p style="font-size: 13px; color: #5C7243;">Prev</p>
-                                                </div>
-
-                                                <p id="page-number" class="page-number">1</p>
-                                                <div>
-                                                    <a href="#" id="next-page" class="next-page">
-                                                        <i class="bi bi-arrow-right green-icon"
-                                                            style="margin-left: 8px;"></i>
-                                                    </a>
-                                                    <p style="font-size: 13px; color: #5C7243; ">Next</p>
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </div>
-
                                 </div>
                             </div>
                         </div>
@@ -280,14 +278,14 @@
             <div id='rodape-conteudo' class="row align-items-center">
                 <div class="col-lg-4 mb-md-0 justify-content-center align-items-center">
                     <a href="../PaginaPrincipal/PaginaPrincipal.html"><img src="../Imagens/1.png"
-                            alt="logo Cash Control" style="height: 80px;"></a>
+                            alt="logo Cash Control" style="height: 90px;"></a>
                 </div>
                 <div class="col-lg-8 col-md-12 mb-md-0 text-center">
                     <h5 id='frase-impacto' class="text-uppercase mb-1 mt-3">CONQUISTE O CONTROLE FINANCEIRO QUE VOCÊ
                         MERECE!</h5>
                     <button id='botao-atendimento' type="button" class="btn mt-3 mb-3">
-                        <a href="mailto:atendimentocashcontrol@outlook.com.br" target="_blank"> CENTRAL DE
-                            ATENDIMENTO
+                        <a id="link-atendimento" href="mailto:atendimentocashcontrol@outlook.com.br" target="_blank">
+                            CENTRAL DE ATENDIMENTO
                         </a></button>
                 </div>
             </div>
