--- a/PerfilUsuario/PerfilUsuario.html
+++ b/PerfilUsuario/PerfilUsuario.html
@@ -12,7 +12,7 @@
   <script src="PerfilUsuario.js"></script>
 </head>
 
-<body>
+<body background="../Imagens/Fundo.jpg">
 
   <!-- CABEÇALHO -->
   <header>
