NAO MEXER MAIS!!

--- a/ItensCadastrados/ItensCadastrados.html
+++ b/ItensCadastrados/ItensCadastrados.html
@@ -13,7 +13,7 @@
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
 </head>
 
-<body background="../Imagens/Fundo.png">
+<body background="../Imagens/Fundo.jpg">
 
     <!-- MENU SUPERIOR -->
     <div class="MenuSUPERIOR" id="menuSUPERIOR">
@@ -95,11 +95,6 @@
                         <li class="mt-2">
                             <a href="../CadastroItens/Outros.html"> Outros</a>
                         </li>
-                        <li class="mt-4">
-                            <button id='botao-itens-flex' type="button" class="btn">
-                                <a id="link-itens-flex" href="../ItensCadastrados/ItensCadastrados.html"> Cadastrados
-                                </a></button>
-                        </li>
                     </ul>
                 </div>
             </div>
@@ -160,10 +155,6 @@
                                     Outros </a></div>
                         </div>
                     </div>
-
-                    <button id='botao-itens' type="button" class="btn">
-                        <a id="link-itens" href="../ItensCadastrados/ItensCadastrados.html"> ITENS CADASTRADOS
-                        </a></button>
                 </div>
             </div>
         </div>
