--- a/PaginaInicial/PaginaInicial.html
+++ b/PaginaInicial/PaginaInicial.html
@@ -304,16 +304,10 @@
                 <div class="col-lg-4 col-md-6 mb-4 mb-md-0">
                     <h5 id='frase-impacto' class="mb-1 mt-3">CONQUISTE O CONTROLE FINANCEIRO QUE VOCÊ MERECE!</h5>
                 </div>
-
-                <div class="col-lg-4 col-md-12 mb-md-0">
-                    <h3 id='frase-newsletter' class="text-white mb-3">INSCREVA-SE PARA RECEBER DICAS DE
-                        <br /> ORGANIZAÇÃO FINANCEIRA!
-                    </h3>
-                    <form class="d-flex justify-content-center align-items-center" action="#">
-                        <input id="input-email" type="text" name="text" class="form-control me-2"
-                            placeholder="Digite seu e-mail">
-                        <button id="botao-inscreva-se" class="btn btn-default" onclick="validarCadastro()"> INSCREVA-SE
-                        </button>
+                <button id='botao-atendimento' type="button" class="btn mt-3 mb-3">
+                    <a id="link-atendimento" href="mailto:atendimentocashcontrol@outlook.com.br" target="_blank">
+                        CENTRAL DE ATENDIMENTO
+                    </a></button>
                     </form>
                 </div>
             </div>
