--- a/PaginaPrincipal/PaginaPrincipal.html
+++ b/PaginaPrincipal/PaginaPrincipal.html
@@ -11,7 +11,7 @@
     <script src="PaginaPrincipal.js"></script>
 </head>
 
-<body background="../Imagens/Fundo.png">
+<body background="../Imagens/Fundo.jpg">
 
     <!-- MENU SUPERIOR -->
     <div class="MenuSUPERIOR" id="menuSUPERIOR">
