--- a/EditarItem/EditarItem.html
+++ b/EditarItem/EditarItem.html
@@ -185,7 +185,7 @@
                             <div class="invalid-feedback">Preencha o campo.</div>
                         </div>
                         <div>
-                            <label> VALOR UNITÁRIO </label>
+                            <label> VALOR </label>
                             <input type="number" id="valor" name="valor" class="form-control" required>
                             <div class="valid-feedback"></div>
                             <div class="invalid-feedback">Preencha o campo.</div>
