--- a/ItensCadastrados/ItensCadastrados.html
+++ b/ItensCadastrados/ItensCadastrados.html
@@ -270,7 +270,7 @@
         <div class="container p-1">
             <div id='rodape-conteudo' class="row align-items-center">
                 <div class="col-lg-4 mb-md-0 justify-content-center align-items-center">
-                    <a href="../PaginaPrincipal/PaginaPrincipal.html"><img src="../Imagens/1.png"
+                    <a href="../PaginaPrincipal/PaginaPrincipal.html"><img id="imagem-rodape" src="../Imagens/1.png"
                             alt="logo Cash Control" style="height: 90px;"></a>
                 </div>
                 <div class="col-lg-8 col-md-12 mb-md-0 text-center">
